--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,7 @@ section {
         url("../fonts/SEGOEUI.ttf");
         url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff2) format("woff2"),
         url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff) format("woff"),
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.ttf) format("truetype");
-    font-weight: thin;
+    font-weight: 100;
     font-style: normal;
 }
 
@@ -99,7 +98,6 @@ a:visited{
 a:hover{
     color:#4C3639;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.3);
-}
 }
 
 a:active{
