--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,14 @@ section {
 /* || Typography */
 
 @font-face {
-    font-family: SEGOEUI, normal;
+    font-family: SEGOEUI;
     src:
-        url("../fonts/SEGOEUI.ttf");
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff2) format("woff2");
-        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff) format("woff");
+        url("../fonts/SEGOEUI.ttf"),
+        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff2) format("woff2"),
+        url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff) format("woff"),
         url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.ttf) format("ttf");
     font-weight: 100;
-    font-style: italic;
+    font-style: normal;
 }
 
 body {
