--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ figure {
 
 /* PHONE */
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 412px) and (max-height: 915px){
   main {
     flex-direction: column;
     align-items: center;
@@ -216,7 +216,7 @@ figure {
 
 /* TABLET */
 
-@media screen and (min-width: 350px) and (max-width: 1480px) {
+@media screen and (min-width: 800px) and (max-width: 1200px) {
   main {
     background-color: #FFFFFF;
     padding: 0;
